--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="org.tamaproject.Game" android:label="Game"></activity>
     </application>
 
 </manifest>
