Renamed org.tamaproject to com.tamaproject

--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.tamaproject"
+    package="com.tamaproject"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.tamaproject.Game" android:label="Game"></activity>
+        <activity android:name="com.tamaproject.Game" android:label="Game"></activity>
     </application>
 
 </manifest>
