--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -11,16 +11,20 @@
         android:label="@string/app_name" >
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" 
-            android:noHistory="true"
-            android:excludeFromRecents="true">
+            android:excludeFromRecents="true"
+            android:label="@string/app_name"
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.tamaproject.Game" android:label="Game"></activity>
+        <activity
+            android:name="com.tamaproject.Game"
+            android:label="Game"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
