--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -4,19 +4,18 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="8" />
 
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
-            android:name=".LoginActivity"
+            android:name=".AndEngineGame"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
             android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,11 +24,7 @@
             android:label="Game"
             android:screenOrientation="portrait" >
         </activity>
-        <activity
-            android:name=".TamagotchiActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
-        </activity>
+        <activity android:name=".minigames.TamaShooter" android:configChanges="orientation"/>
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
