Added hunger and sickness bars and icons

--- a/Tamagotchi Project/.classpath
+++ b/Tamagotchi Project/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/andengine/andengine.jar"/>
 	<classpathentry kind="lib" path="libs/andengine/andengineaugmentedrealityextension.jar"/>
 	<classpathentry kind="lib" path="libs/andengine/andenginelivewallpaperextension.jar"/>
 	<classpathentry kind="lib" path="libs/andengine/andenginemodplayerextension.jar"/>
@@ -13,5 +12,6 @@
 	<classpathentry kind="lib" path="libs/andengine/andenginephysicsbox2dextension.jar"/>
 	<classpathentry kind="lib" path="libs/andengine/andenginesvgtextureregionextension.jar"/>
 	<classpathentry kind="lib" path="libs/andengine/andenginetexturepackerextension.jar"/>
+	<classpathentry kind="lib" path="andengine2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
