--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -11,11 +11,10 @@
         android:label="@string/app_name" >
         <activity
             android:name=".AndEngineGame"
-            android:excludeFromRecents="true"
-            android:label="@string/app_name"
-            android:noHistory="true" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,7 +23,9 @@
             android:label="Game"
             android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".minigames.TamaShooter" android:configChanges="orientation"/>
+        <activity
+            android:name=".minigames.TamaShooter"
+            android:configChanges="orientation" />
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
