--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -26,6 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity
+            android:name=".MiniGameListActivity"
+            android:configChanges="orientation" />
         <activity
             android:name=".minigames.TamaShooter"
             android:configChanges="orientation" />
