Added warning message for death match. Players get double the experience if they win a death match.

--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
          <activity
-            android:name=".MiniGameListActivity"
+            android:name=".minigames.MiniGameListActivity"
             android:configChanges="orientation" />
         <activity
             android:name=".minigames.TamaShooter"
