Moved item store to different class Cleaned up DatabaseHelper

--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity
             android:name=".multiplayer.TamaBattle"
             android:configChanges="orientation" />
+        <activity
+            android:name=".itemstore.ItemStore"
+            android:configChanges="orientation" />
     </application>
 
 </manifest>
