Added code for my minigame, added my minigame to the list activity and added sprites for the minigame and modified the manifest to run the minigame activity

--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:name=".minigames.MiniGame"
             android:configChanges="orientation" />
         <activity
+            android:name=".minigames.TamaNinja"
+            android:configChanges="orientation" />        
+        <activity
             android:name=".multiplayer.TamaBattle"
             android:configChanges="orientation" />
         <activity
