--- a/Tamagotchi Project/AndroidManifest.xml
+++ b/Tamagotchi Project/AndroidManifest.xml
@@ -13,7 +13,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
+	<uses-permission android:name="android.permission.CAMERA"/>
+	
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
